# arabic-english-rag-chatbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  ROADMAP.md  TECH_STACK.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
data/chat_history/: 2026-06-12_02-50-55.json  2026-06-14_18-38-56.json  2026-06-14_19-20-26.json  2026-06-14_19-30-40.json  2026-06-14_21-23-54.json  2026-06-15_19-57-18.json  2026-06-15_20-34-36.json  (+2 more)
docs/: architecture.md
evaluation/: evaluate.py  evaluate_self_contained.py  golden_questions.json  questions.json  report.md  results.csv  results.json
scripts/: analyze_arabic.py  check_arabic_quality.py  chunk_arabic_pdf.py  compare_runs.py  debug_query.py  download_samples.py  embed_arabic.py  evaluate.py  generate_ar_pdf.py  generate_arabic_policy_pdf.py  generate_golden_resume.py  generate_synthetic_paper.py  ingest.py  quality_check.py  query.py  save_chunks.py  test_ar_search.py  test_arabic_extraction.py  test_arabic_phase4.py  test_phase3.py  test_phase3_queries.py  test_phase4.py  test_pyramids.py  validate_arabic.py  verify_search.py
src/: __init__.py  config.py
src/api/: main.py  (+1 more)
tests/: conftest.py  test_api.py  test_charts.py  test_chroma_store.py  test_document_schemas.py  test_documents.py  test_embedder.py  test_evaluate.py  test_golden_resume.py  test_hybrid.py  test_ocr.py  test_ollama_llm.py  test_pdf_chunking.py  test_pdf_extraction.py  test_placeholder.py  test_processor.py  test_pyramids_chunks.py  test_rag_chain.py  test_reranker.py  test_streamlit_history.py
(+22 files in other folders)
